Remove TestOldGrowthTriggers from the PR